fix/button alignment

--- a/public/css/customize.css
+++ b/public/css/customize.css
@@ -233,7 +233,7 @@ textarea {
   color: white;
   padding: 12px;
   border: none;
-  border-radius: 5px;
+  border-radius: 50px;
   cursor: pointer;
   font-size: 16px;
 }
